links y foto arreglada

--- a/app/cobertura_oncologica.html
+++ b/app/cobertura_oncologica.html
@@ -105,24 +105,24 @@
                 <h2>Especificaciones</h2>
                 <br>
                 <ul class="listaClara">
-                  <li>Procedimientos para confirmar diagnóstico: <span class="azulClaro">SIN COSTO</span>. Comprenden:Exámenes de Laboratorio, Radiología, Tomografía Computarizada, Medicina Nuclear.</li>
-                  <li>Consultas y Procedimientos Clínicas: <span class="azulClaro">SIN COSTO</span>. Destinados a la ejecución del tratamiento y la observación de su evolución hasta un período de 6 meses después de concluido el tratamiento.</li>
-                  <li>Tratamientos: Radioterapia y/o Quimioterapia: <span class="azulClaro">SIN COSTO</span>, incluidos los honorarios profesionales de médicos y paramédicos. Los Honorarios Médicos y Paramédicos por cirugías y hospitalizaciones: <span class="azulClaro">SIN COSTO</span>.</li>
-                  <li>Hospitalización, que comprende días cama, Cirugías, Uso de Pabellones Quirúrgicos, UTI, UCI,  procedimientos diagnósticos intrahospitalarios: <span class="azulClaro">SIN COSTO</span>. Para estos efectos Cell Iram proveerá las instalaciones que dispone en convenio con terceros.</li>
+                  <li><span class="azulOscuro">Procedimientos para confirmar diagnóstico:</span> <span class="azulClaro">Sin Costo</span>. Comprenden:Exámenes de Laboratorio, Radiología, Tomografía Computarizada, Medicina Nuclear.</li>
+                  <li><span class="azulOscuro">Consultas y Procedimientos Clínicas:</span> <span class="azulClaro">Sin Costo</span>. Destinados a la ejecución del tratamiento y la observación de su evolución hasta un período de 6 meses después de concluido el tratamiento.</li>
+                  <li><span class="azulOscuro">Tratamientos:</span> Radioterapia y/o Quimioterapia: <span class="azulClaro">Sin Costo</span>, incluidos los honorarios profesionales de médicos y paramédicos. Los Honorarios Médicos y Paramédicos por cirugías y hospitalizaciones: <span class="azulClaro">Sin Costo</span>.</li>
+                  <li><span class="azulOscuro">Hospitalización</span>, que comprende días cama, Cirugías, Uso de Pabellones Quirúrgicos, UTI, UCI,  procedimientos diagnósticos intrahospitalarios: <span class="azulClaro">Sin Costo</span>. Para estos efectos Cell Iram proveerá las instalaciones que dispone en convenio con terceros.</li>
                   <li>Los valores correspondientes a medicamentos, materiales e insumos clínicos, transfusiones y banco de sangre que se empleen durante cada hospitalización, hasta el monto de 4 U.F. por hospitalización.</li>
-                  <li>Drogas Antineoplásicas: <span class="azulClaro">SIN COSTO</span>, hasta un tope de 100 UF por paciente y tratamiento de quimioterapia planificado y aplicado.</li>
-                  <li>Consultas Médicas Especializadas: <span class="azulClaro">SIN COSTO</span>, destinadas a controlar la evolución a largo plazo del paciente.</li>
-                  <li>Nuevos Tratamientos: Todo nuevo tratamiento oncológico indicado después del inicial, se efectuará en las mismas condiciones ya mencionadas para un primer tratamiento.</li>
+                  <li><span class="azulOscuro">Drogas Antineoplásicas:</span> <span class="azulClaro">Sin Costo</span>, hasta un tope de 100 UF por paciente y tratamiento de quimioterapia planificado y aplicado.</li>
+                  <li><span class="azulOscuro">Consultas Médicas Especializadas:</span> <span class="azulClaro">Sin Costo</span>, destinadas a controlar la evolución a largo plazo del paciente.</li>
+                  <li><span class="azulOscuro">Nuevos Tratamientos:</span> Todo nuevo tratamiento oncológico indicado después del inicial, se efectuará en las mismas condiciones ya mencionadas para un primer tratamiento.</li>
                 </ul> 
             </div>
             <div class="tab-pane contentTab" id="beneficios">
                 <h2>Beneficios</h2>
                 <br>
                 <ul class="listaClara">
-                  <li>La cobertura es vitalicia: Una vez que ha ingresado a la cobertura permanece sin tope de edad mientras la póliza se encuentre vigente.</li>
-                  <li>Cubre todo tipo de cáncer, sin importar el número de tratamientos que sean necesarios para tratar la enfermedad por el mismo o nuevos cánceres 002E.</li>
-                  <li>No posee deducibles.</li>
-                  <li>Entrega exámenes sin costo para la detección precoz del cáncer de próstata (Un examen anual de antígeno prostático específico a contar de los 45 años).</li>
+                  <li><span class="azulOscuro">La cobertura es vitalicia:</span> Una vez que ha ingresado a la cobertura permanece sin tope de edad mientras la póliza se encuentre vigente.</li>
+                  <li><span class="azulOscuro">Cubre todo tipo de cáncer</span>, sin importar el número de tratamientos que sean necesarios para tratar la enfermedad por el mismo o nuevos cánceres 002E.</li>
+                  <li><span class="azulOscuro">No posee deducibles.</span></li>
+                  <li><span class="azulOscuro">Entrega exámenes sin costo</span> para la detección precoz del cáncer de próstata (Un examen anual de antígeno prostático específico a contar de los 45 años).</li>
                 </ul>
             </div>
             <div class="tab-pane contentTab" id="prima">
@@ -170,7 +170,7 @@
 
       <footer>
         <div class="mutual">
-          <p><span class="destacadoFooter">Mutual de Seguros de Chile</span></p>
+          <p><a href="https://www.mutualdeseguros.cl/" target="_blank"><span class="destacadoFooter">Mutual de Seguros de Chile</span></a></p>
           <p>Molina N° 446, Valparaíso - Chile</p>
         </div>
         <div class="contacto">
@@ -178,7 +178,7 @@
           <p><span class="destacadoFooter capitulizar">Desde celulares</span> (32) 2326707</p>
         </div>
         <div class="fotosFooter pull-right">
-          <p><span class="destacadoFooter capitulizar">Email: </span>contacto@mutualdeseguros.cl</p>
+          <p><span class="destacadoFooter capitulizar">Email: </span><a class="white" href="https://www.mutualdeseguros.cl/contacto/" target="_blank">contacto@mutualdeseguros.cl</a></p>
         </div>
       </footer>
 
