--- a/app/index.html
+++ b/app/index.html
@@ -132,7 +132,7 @@
 
     <footer>
       <div class="mutual">
-        <p><span class="destacadoFooter">Mutual de Seguros de Chile</span></p>
+        <p><a href="https://www.mutualdeseguros.cl/" target="_blank"><span class="destacadoFooter">Mutual de Seguros de Chile</span></a></p>
         <p>Molina N° 446, Valparaíso - Chile</p>
       </div>
       <div class="contacto">
@@ -140,7 +140,7 @@
         <p><span class="destacadoFooter capitulizar">Desde celulares</span> (32) 2326707</p>
       </div>
       <div class="fotosFooter pull-right">
-        <p><span class="destacadoFooter capitulizar">Email: </span>contacto@mutualdeseguros.cl</p>
+        <p><span class="destacadoFooter capitulizar">Email: </span><a class="white" href="https://www.mutualdeseguros.cl/contacto/" target="_blank">contacto@mutualdeseguros.cl</a></p>
       </div>
     </footer>
 
