--- a/app/papa-seguro.html
+++ b/app/papa-seguro.html
@@ -245,7 +245,7 @@ educación de su hijo, ante el fallecimiento del titular (cobertura válida hast
 
       <footer>
         <div class="mutual">
-          <p><span class="destacadoFooter">Mutual de Seguros de Chile</span></p>
+          <p><a href="https://www.mutualdeseguros.cl/" target="_blank"><span class="destacadoFooter">Mutual de Seguros de Chile</span></a></p>
           <p>Molina N° 446, Valparaíso - Chile</p>
         </div>
         <div class="contacto">
@@ -253,7 +253,7 @@ educación de su hijo, ante el fallecimiento del titular (cobertura válida hast
           <p><span class="destacadoFooter capitulizar">Desde celulares</span> (32) 2326707</p>
         </div>
         <div class="fotosFooter pull-right">
-          <p><span class="destacadoFooter capitulizar">Email: </span>contacto@mutualdeseguros.cl</p>
+          <p><span class="destacadoFooter capitulizar">Email: </span><a class="white" href="https://www.mutualdeseguros.cl/contacto/" target="_blank">contacto@mutualdeseguros.cl</a></p>
         </div>
       </footer>
 
