iteracion en el sitio

--- a/app/index.html
+++ b/app/index.html
@@ -90,7 +90,10 @@
         <div class="jumbotron">
           <div class="descripcion">
             <p>
-              <span class="resalta">Seguro <span class="azulClaro">Papá</span></span> es un seguro de vida diseñado especialmente para el Papá y sus hijos. Puede ser contratado en plazos renovables de 5, 10, 15 y 20 años o vitalicio. Permite la incorporación de cláusulas adicionales para los hijos, tales como Cobertura de Reembolso de Gastos Funerarios y Cláusula de Ayuda Educacional.
+              <span class="resalta">Seguro <span class="azulClaro">Papá</span></span> es un seguro de vida diseñado especialmente para el Papá y sus hijos, que otorga cobertura por fallecimiento del asegurado titular.
+            </p>
+            <p>
+              Contempla la opción de asegurar la educación de tus hijos, brinda la posibilidad de ahorrar a la medida con una rentabilidad garantizada y te da la alternativa de protegerte contra el cáncer, a través de un convenio con el <span class="azulOscuro">Instituto de Radio Medicina de Chile</span> <span class="resalta"><span class="azulClaro">(IRAM)</span></span>.
             </p>
   
           </div>
