--- a/app/index.html
+++ b/app/index.html
@@ -90,10 +90,10 @@
         <div class="jumbotron">
           <div class="descripcion">
             <p>
-              <span class="resalta">Seguro <span class="azulClaro">Papá</span></span> es un seguro de vida diseñado especialmente para el Papá y sus hijos, que otorga cobertura por fallecimiento del asegurado titular.
+              <span class="resalta">Seguro <span class="azulClaro">Papá</span></span> es un seguro de vida diseñado especialmente para el Papá y sus hijos, con cobertura principal de fallecimiento del asegurado titular.
             </p>
             <p>
-              Contempla la opción de asegurar la educación de tus hijos, brinda la posibilidad de ahorrar a la medida con una rentabilidad garantizada y te da la alternativa de protegerte contra el cáncer, a través de un convenio con el <span class="azulOscuro">Instituto de Radio Medicina de Chile</span> <span class="resalta"><span class="azulClaro">(IRAM)</span></span>.
+              Además, contempla la opción de asegurar la educación de tus hijos en caso de fallecimiento, a través del pago de una renta anual, brinda la posibilidad de ahorrar a la medida con una rentabilidad garantizada, y te da la alternativa de protegerte contra el cáncer, a través de un convenio con el <span class="azulOscuro">Instituto de Radio Medicina de Chile</span> <span class="resalta"><span class="azulClaro">(IRAM)</span></span>.
             </p>
   
           </div>
