arreglo en puntos

--- a/app/papa-seguro.html
+++ b/app/papa-seguro.html
@@ -230,9 +230,9 @@
                     * Sólo cuando se tiene contratada una Cláusula de Ahorro.
                   </p>
                   <p class="letraChica sinMargen">
-                    *** Sólo rige para los hijos incorporados a la Cláusula de Ayuda Educacional, si ésta ha sido contratada por el asegurado titular.
+                    ** Sólo para hijos mayores de 15 años.
                   </p>
-                  <p class="letraChica sinMargen">*** Sólo rige para los hijos asociados a cada CAE contratada.</p>
+                  <p class="letraChica sinMargen">*** Sólo rige para los hijos incorporados a la Cláusula de Ayuda Educacional, si ésta ha sido contratada por el asegurado titular.</p>
                   <p class="pocoMargen"><a href="https://www.mutualdeseguros.cl/beneficios-gratuitos/" target="_blank">Aquí </a>puede encontrar más información sobre los beneficios.</p>
                   <br>
                   <p class="letraChica sinMargen"><span class="azulClaro">IMPORTANTE:</span> Los beneficios adicionales gratuitos no forman parte de las coberturas principales o adicionales del seguro papá, de manera que no se cobra prima por la posibilidad de acceder a ellos. Consisten en ayudas de carácter económico y social cuyo fin es apoyar el bienestar de las personas en áreas sensibles como salud y educación, y son entregados por la Mutual en virtud de su condición de corporación mutualista sin fines de lucro, sin costos adicionales y sujeto a la disponibilidad de excedentes para tal efecto.
