--- a/app/cobertura_oncologica.html
+++ b/app/cobertura_oncologica.html
@@ -93,7 +93,7 @@
             <div class="tab-pane contentTab" id="cobertura">
                 <h2>¿Qué cubre la Cobertura Oncológica?</h2>
                 <br>
-                <ul class="listaClara">
+                <ul class="listaClara sinPuntos">
                   <li><span class="glyphicon glyphicon-ok marginList azulClaro" aria-hidden="true"></span>Confirmación del diagnóstico del cáncer.</li>
                   <li><span class="glyphicon glyphicon-ok marginList azulClaro" aria-hidden="true"></span>Servicio integral para el tratamiento del cáncer por médicos oncólogos especialistas de la Clínica IRAM.</li>
                   <li><span class="glyphicon glyphicon-ok marginList azulClaro" aria-hidden="true"></span>Consultas y procedimientos clínicos para tratamientos contra el cáncer determinados por los especialistas.</li>
