--- a/app/papa-seguro.html
+++ b/app/papa-seguro.html
@@ -48,10 +48,10 @@
 
 
     <div class="container">
-      <section>
-        <div class="jumbotron">
+      <section class="contenedor">
+        <div class="row inlineBlock top fondoGris">
+          <h2 class="futuraItalic titulo">Ventajas <span class="azulClaro">Seguro Papá</span></h2>
           <div class="descripcion">
-            <h1>Ventajas <span class="azulClaro">Seguro Papá</span></h1>
             <ul class="ventajas">
               <li>Es un seguro de vida diseñado especialmente para el Papá y sus hijos.</li>
               <li>Permite asegurar la educación de tus hijos *<span data-tabs="tabs"><a class="scrollchico letraChica" href="#cobertuas" data-toggle="tab">(Ver más)</a></span>.</li>
@@ -60,7 +60,7 @@
               <li>Entrega una indemnización de un 25% adicional por algunas de las causas de muerte más comunes en Chile <span data-tabs="tabs"><a class="scrollchico letraChica" href="#atributos" data-toggle="tab">(Ver más)</a></span>.</li>
               <li>Ofrece flexibilidad respecto al periodo de contratación, ofreciendo plazos renovables de 5, 10, 15 y 20 años o vitalicio.</li>
               <li>Te incorporas como asociado a nuestra Mutual, a partir de lo cual podrás optar a una serie de Beneficios Adicionales Gratuitos especiales para el hombre <span data-tabs="tabs"><a class="scrollchico letraChica" href="#beneficios" data-toggle="tab">(Ver más)</a></span>.</li>
-              <li>Entrega la alternativa de protegerte contra el cáncer a través de un convenio con el <span class="azulClaro">Instituto de Radio Medicina de Chile</span> <span class="azulOscuro">(IRAM)</span> <span data-tabs="tabs"><a class="scrollchico letraChica" href="#cobertuas" data-toggle="tab">(Ver más)</a></span>.</li>
+              <li>Entrega la alternativa de protegerte contra el cáncer a través de un convenio con el Instituto de Radio Medicina de Chile <span class="azulClaro">(IRAM)</span> <span data-tabs="tabs"><a class="scrollchico letraChica" href="#cobertuas" data-toggle="tab">(Ver más)</a></span>.</li>
             </ul>
 
             <p class="letraChica">La presente información sólo representa un resumen general de las coberturas, cuyo detalle y exclusiones correspondientes se encuentran comprendidos en la póliza 
@@ -73,49 +73,54 @@
             <p>*<span class="letraChica">En caso de que se encuentren incorporados a la póliza.</span></p>
           </div>
         </div>
-        <div class="tabsBottom">
-          <ul id="tabs" class="nav nav-tabs nav-justified caract" data-tabs="tabs">
-              <li><a class="scroll" href="#atributos" data-toggle="tab">Atributos</a></li>
-              <li><a class="scroll" href="#cobertuas" data-toggle="tab">Coberturas Opcionales</a></li>
-              <li><a class="scroll" href="#pagos" data-toggle="tab">Medios de Pago</a></li>
-              <li><a class="scroll" href="#beneficios" data-toggle="tab">Beneficios</a></li>
-          </ul>
-        </div>
-        <div id="my-tab-content scrollspy" class="tab-content">
+        <aside class="imgAside inlineBlock top">
+          <img src="images/ventajas.png" alt="">          
+        </aside>
+
+      </section>
+    </div>
+
+    <div class="fondoInt">
+      <div class="contenedor">
+        <!-- infotabs -->
+
+        <div id="my-tab-content scrollspy" class="tab-content row inlineBlock top abajoDelMenu">
             <div class="objetivo"></div>
-            <div class="tab-pane contentTab" id="atributos">
-                <h2>Atributos</h2>
+            <div class="tab-pane active" id="atributos">
+                <h2 class="futuraItalic titulo">Atributos</h2>
                 <br>
-                <p>Considera el pago del capital asegurado contratado una vez que se acredite el fallecimiento del asegurado. Además, destaca como atributo de este seguro la bonificación de un 25% adicional del capital asegurado, ante el fallecimiento del asegurado por las siguientes causas:</p>
-                <ul>
-                  <li>Accidente Vascular Encefálico</li>
-                  <li>Cáncer</li>
-                  <li>Enfermedades Cerebrales</li>
-                  <li>Insuficiencia Renal Crónica</li>
-                  <li>Síndrome Inmunodeficiencia Adquirida (SIDA)</li>
-                  <li>Trasplante de Órganos</li>
-                </ul>
+                <div class="descripcion">
+                  <p>Considera el pago del capital asegurado contratado una vez que se acredite el fallecimiento del asegurado. Además, destaca como atributo de este seguro la bonificación de un 25% adicional del capital asegurado, ante el fallecimiento del asegurado por las siguientes causas:</p>
+                  <ul class="listaIntena">
+                    <li>Accidente Vascular Encefálico</li>
+                    <li>Cáncer</li>
+                    <li>Enfermedades Cerebrales</li>
+                    <li>Insuficiencia Renal Crónica</li>
+                    <li>Síndrome Inmunodeficiencia Adquirida (SIDA)</li>
+                    <li>Trasplante de Órganos</li>
+                  </ul>                  
+                </div>
             </div>
 
-            <div class="tab-pane contentTab" id="cobertuas">
-                <h2>Coberturas Opcionales</h2>
+            <div class="tab-pane" id="cobertuas">
+                <h2 class="futuraItalic titulo">Coberturas Opcionales</h2>
                 <br>
                 <p>Además de la cobertura básica de fallecimiento, y de la cobertura de muerte accidental, existe la opción de contratar una o más coberturas adicionales, según se ajusten a sus necesidades:</p>
-                <p><span class="azulClaro bold">Cláusula de Ahorro:</span> Permite ahorrar mensualmente "a la medida", sin costos de mantención cargos por aportes. La rentabilidad arantizada de la parte de la prima que se destina exclusivamente a ahorro es de U.F. + 2% anual, permitiendo realizar retiros parciales, los cuales quedarán liberados de cargos a partir del quinto año de vigencia de la cláusula. El retiro total o parcial del ahorro no afecta la vigencia del seguro.
+                <p><span class="bold azulClaro futuraItalic">Cláusula de Ahorro:</span> Permite ahorrar mensualmente "a la medida", sin costos de mantención cargos por aportes. La rentabilidad arantizada de la parte de la prima que se destina exclusivamente a ahorro es de U.F. + 2% anual, permitiendo realizar retiros parciales, los cuales quedarán liberados de cargos a partir del quinto año de vigencia de la cláusula. El retiro total o parcial del ahorro no afecta la vigencia del seguro.
                 </p>
                 <p>
-                  <span class="azulClaro bold">Cláusula de Ayuda Educacional:</span> Pagando una prima adicional, Mutual realizará pagos para financiar la educación de su hijo, ante el fallecimiento del titular (cobertura válida hasta diciembre del año anterior en que el hijo cumpla los 24 años de edad, siempre que se encuentre estudiando).</p>
+                  <span class="bold azulClaro futuraItalic">Cláusula de Ayuda Educacional:</span> Pagando una prima adicional, Mutual realizará pagos para financiar la educación de su hijo, ante el fallecimiento del titular (cobertura válida hasta diciembre del año anterior en que el hijo cumpla los 24 años de edad, siempre que se encuentre estudiando).</p>
                 <p>
-                  <span class="azulClaro bold">Cláusula de Reembolso de Servicios Funerarios:</span> Entrega un reembolso por los gastos en servicios funerarios efectuados por el asegurado, ante la eventualidad del fallecimiento de un hijo incorporado a la póliza.
+                  <span class="bold azulClaro futuraItalic">Cláusula de Reembolso de Servicios Funerarios:</span> Entrega un reembolso por los gastos en servicios funerarios efectuados por el asegurado, ante la eventualidad del fallecimiento de un hijo incorporado a la póliza.
                 </p>
                 <p>
-                  <span class="azulClaro bold">Cláusula Adicional de Protección Oncológica:</span> la cual cubre tratamientos terapéuticos a consecuencia de enfermedades cancerígenas, a través de un convenio con el Instituto de Radio Medicina de Chile <span class="azulOscuro">(IRAM)</span>, clínica oncológica con 40 años de trayectoria en la lucha contra el cáncer.
+                  <span class="bold azulClaro futuraItalic">Cláusula Adicional de Protección Oncológica:</span> la cual cubre tratamientos terapéuticos a consecuencia de enfermedades cancerígenas, a través de un convenio con el Instituto de Radio Medicina de Chile <span class="azulOscuro">(IRAM)</span>, clínica oncológica con 40 años de trayectoria en la lucha contra el cáncer.
                 </p>
             </div>
-            <div class="tab-pane contentTab" id="pagos">
-                <h2>Medios de Pago</h2>
+            <div class="tab-pane" id="pagos">
+                <h2 class="futuraItalic titulo">Medios de Pago</h2>
                 <br>
-                <ul>
+                <ul class="listaIntena">
                   <li>Descuento por planilla</li>
                   <li>Pago Automático de Cuentas (PAC)</li>
                   <li>Pago Automático con Tarjetas de Crédito (PAT)</li>
@@ -128,8 +133,8 @@
                   </figure>
                 </div>
             </div>
-            <div class="tab-pane contentTab" id="beneficios">
-                <h2>Beneficios Adicionales Gratuitos</h2>
+            <div class="tab-pane" id="beneficios">
+                <h2 class="futuraItalic titulo">Beneficios Adicionales Gratuitos</h2>
                 <br>
                 <p>Mutual de Seguros contempla los siguientes beneficios gratuitos para los asociados que han contratado el seguro, los que se extienden a los hijos incorporados al mismo.</p>
                 <div class="container">
@@ -144,63 +149,63 @@
                     <tbody>
                       <tr>
                         <td>Bonificación al Ahorro *</td>
-                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok naranjo" aria-hidden="true"></span></td>
                         <td></td>
                       </tr>
                       <tr>
                         <td>Atención de Consulta Médica Preventiva **</td>
-                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
-                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok naranjo" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok naranjo" aria-hidden="true"></span></td>
                       </tr>
                       <tr>
                         <td>Intervención Quirúrgica</td>
-                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
-                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok naranjo" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok naranjo" aria-hidden="true"></span></td>
                       </tr>
                       <tr>
                         <td>Intervención Quirúrgica producto de un Cáncer</td>
-                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok naranjo" aria-hidden="true"></span></td>
                         <td></td>
                       </tr>
                       <tr>
                         <td>Intervención Quirúrgica Dental</td>
-                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
-                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok naranjo" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok naranjo" aria-hidden="true"></span></td>
                       </tr>
                       <tr>
                         <td>Natalidad</td>
-                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok naranjo" aria-hidden="true"></span></td>
                         <td></td>
                       </tr>
                       <tr>
                         <td>Odontológico</td>
-                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
-                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok naranjo" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok naranjo" aria-hidden="true"></span></td>
                       </tr>
                       <tr>
                         <td>Oftalmológico</td>
-                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
-                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok naranjo" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok naranjo" aria-hidden="true"></span></td>
                       </tr>
                       <tr>
                         <td><span class="destacadoFooter capitulizar azulOscuro">Exámenes de diagnóstico de Cáncer Testicular</span></td>
-                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok naranjo" aria-hidden="true"></span></td>
                         <td></td>
                       </tr>
                       <tr>
                         <td><span class="destacadoFooter capitulizar azulOscuro">Exámenes de Diagnóstico de Cáncer de Próstata</span></td>
-                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok naranjo" aria-hidden="true"></span></td>
                         <td></td>
                       </tr>
                       <tr>
                         <td>Odontológico para hijos ***</td>
-                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
-                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok naranjo" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok naranjo" aria-hidden="true"></span></td>
                       </tr>
                       <tr>
                         <td>Plantillas Ortopédicas ***</td>
-                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
-                        <td><span class="glyphicon glyphicon-ok azulOscuro" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok naranjo" aria-hidden="true"></span></td>
+                        <td><span class="glyphicon glyphicon-ok naranjo" aria-hidden="true"></span></td>
                       </tr>
                     </tbody>
                   </table>
@@ -218,8 +223,18 @@
                 </div>
             </div>
         </div>
+        <!-- tabs -->
+
+        <div class="tabsBottom linksTo inlineBlock top marginTopZero menuArriba">
+          <ul id="tabs" class="nav" data-tabs="tabs">
+              <li class="active"><a class="scroll botonMenu" href="#atributos" data-toggle="tab"><span class="futuraBold gris">Atributos</span></a></li>
+              <li><a class="scroll botonMenu" href="#cobertuas" data-toggle="tab"><span class="futuraBold gris">Coberturas Opcionales</span></a></li>
+              <li><a class="scroll botonMenu" href="#pagos" data-toggle="tab"><span class="futuraBold gris">Medios de Pago</span></a></li>
+              <li><a class="scroll botonMenu" href="#beneficios" data-toggle="tab"><span class="futuraBold gris">Beneficios</span></a></li>
+          </ul>
+        </div>
         
-      </section>
+      </div>      
     </div>
 
       <footer>
