--- a/app/cobertura_oncologica.html
+++ b/app/cobertura_oncologica.html
@@ -38,8 +38,8 @@
         <nav class="collapse navbar-collapse" id="js-navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a class="botonMenu" href="index.html"><span>Inicio</span></a></li>
-            <li class="active"><a class="botonMenu" href="papa-seguro.html"><span>Seguro Papá</span></a></li>
-            <li><a class="botonMenu" href="cobertura_oncologica.html"><span>Cobertura Oncológica</span></a></li>
+            <li><a class="botonMenu" href="papa-seguro.html"><span>Seguro Papá</span></a></li>
+            <li class="active"><a class="botonMenu" href="cobertura_oncologica.html"><span>Cobertura Oncológica</span></a></li>
           </ul>
         </nav>
 
