--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,7 @@
             <div class="imagenCarrusel" style="background-image:url(images/foto-1.jpg); background-position: center;"></div>
             <div class="carousel-caption textoEntrada">
               <h2>
-                <span class="gris fontChico">Cuidamos de ti, para que</span><br>
+                <span class="fontChico">Cuidamos de ti, para que</span><br>
                 <span class="amarillo fontGrande"><span class="azulClaro">disfrutes</span> la vida</span><br>
                 con quienes más amas.
               </h2>
@@ -67,8 +67,8 @@
              <div class="imagenCarrusel" style="background-image:url(images/foto-2.jpg); background-position: center;"></div>
              <div class="carousel-caption textoEntrada">
                <h2>
-                  <span class="gris fontChico">Verlos triunfar en la vida,</span><br>
-                  es el mayor<br>
+                  <span class="fontChico">Verlos triunfar en la vida,</span><br>
+                  <span class="amarillo">es el mayor</span><br>
                   <span class="azulClaro fontGrande">anhelo de</span><br>
                   <span class="amarillo fontGrande"> un padre.</span>
                </h2>
@@ -98,7 +98,7 @@
     <div class="container">
       <section class="contenedor">
         <div class="row inlineBlock top">
-          <h2 class="futuraItalic titulo">¿Qué es el Seguro Papá?</h2>
+          <h2 class="futuraItalic titulo"><span class="openSansAzulito">¿</span>Qué es el Seguro Papá<span class="openSansAzulito">?</span></h2>
           <div class="descripcion">
             <p>
               <span class="resalta futuraItalic">Seguro Papá</span> es un seguro de vida diseñado especialmente para el Papá y sus hijos, con cobertura principal de fallecimiento del asegurado titular.
@@ -179,7 +179,7 @@
         <p><span class="destacadoFooter capitulizar">Desde celulares</span> (32) 2326707</p>
       </div>
       <div class="fotosFooter pull-right">
-        <p><span class="destacadoFooter capitulizar">Email: </span><a class="white" href="https://www.mutualdeseguros.cl/contacto/" target="_blank">contacto@mutualdeseguros.cl</a></p>
+        <p><span class="destacadoFooter capitulizar">Email: </span><a class="gris" href="https://www.mutualdeseguros.cl/contacto/" target="_blank">contacto@mutualdeseguros.cl</a></p>
       </div>
     </footer>
 
