gris olvidado en footer

--- a/app/papa-seguro.html
+++ b/app/papa-seguro.html
@@ -271,7 +271,7 @@
       <p><span class="destacadoFooter capitulizar">Desde celulares</span> (32) 2326707</p>
     </div>
     <div class="fotosFooter pull-right">
-      <p><span class="destacadoFooter capitulizar">Email: </span><a class="white" href="https://www.mutualdeseguros.cl/contacto/" target="_blank">contacto@mutualdeseguros.cl</a></p>
+      <p><span class="destacadoFooter capitulizar">Email: </span><a class="gris" href="https://www.mutualdeseguros.cl/contacto/" target="_blank">contacto@mutualdeseguros.cl</a></p>
     </div>
   </footer>
 
