--- a/app/index.html
+++ b/app/index.html
@@ -59,7 +59,7 @@
               <h2>
                 <span class="fontChico">Cuidamos de ti, para que</span><br>
                 <span class="amarillo fontGrande"><span class="azulClaro">disfrutes</span> la vida</span><br>
-                con quienes más amas.
+                con quienes más amas
               </h2>
             </div>
           </div>
@@ -70,7 +70,7 @@
                   <span class="fontChico">Verlos triunfar en la vida,</span><br>
                   <span class="amarillo">es el mayor</span><br>
                   <span class="azulClaro fontGrande">anhelo de</span><br>
-                  <span class="amarillo fontGrande"> un padre.</span>
+                  <span class="amarillo fontGrande"> un padre</span>
                </h2>
              </div>
           </div>
@@ -170,17 +170,26 @@
     </div>
 
     <footer>
-      <div class="mutual">
-        <p><a href="https://www.mutualdeseguros.cl/" target="_blank"><span class="destacadoFooter">Mutual de Seguros de Chile</span></a></p>
-        <p>Molina N° 446, Valparaíso - Chile</p>
-      </div>
-      <div class="contacto">
-        <p><span class="destacadoFooter capitulizar">Call Center</span> 600 626 7311</p>
-        <p><span class="destacadoFooter capitulizar">Desde celulares</span> (32) 2326707</p>
-      </div>
-      <div class="fotosFooter pull-right">
-        <p><span class="destacadoFooter capitulizar">Email: </span><a class="gris" href="https://www.mutualdeseguros.cl/contacto/" target="_blank">contacto@mutualdeseguros.cl</a></p>
-      </div>
+      <ul class="contFooter">
+        <li class="imgFooter">
+          <a href="https://www.mutualdeseguros.cl/" target="_blank">
+            <figure class="enLinea">
+              <img src="images/logo.png" alt="">
+            </figure>
+          </a>         
+        </li>
+        <li>
+          <h3>Mutual de Seguros de Chile</h3>
+          <p>Molina N° 446, Valparaíso - Chile</p>
+          <p><a href="https://www.mutualdeseguros.cl/" target="_blank"><span class="destacadoFooter">https://www.mutualdeseguros.cl/</span></a></p>
+        </li>
+        <li>
+          <h3>Contacto</h3>
+          <p><span class="destacadoFooter capitulizar">Call Center</span> 600 626 7311</p>
+          <p><span class="destacadoFooter capitulizar">Desde celulares</span> (32) 2326707</p>
+          <p><span class="destacadoFooter capitulizar">Email: </span><a class="gris" href="https://www.mutualdeseguros.cl/contacto/" target="_blank">contacto@mutualdeseguros.cl</a></p>
+        </li>
+      </ul>
     </footer>
 
     
