--- a/app/papa-seguro.html
+++ b/app/papa-seguro.html
@@ -313,7 +313,7 @@
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
         <script type="text/javascript">
-            jQuery(document).ready(function ($) {
+            $(document).ready(function ($) {
                 $('#tabs').tab();
             });
         </script> 
