footer paginas internas

--- a/app/cobertura_oncologica.html
+++ b/app/cobertura_oncologica.html
@@ -178,19 +178,28 @@
       </div>
     </div>
 
-      <footer>
-        <div class="mutual">
-          <p><a href="https://www.mutualdeseguros.cl/" target="_blank"><span class="destacadoFooter">Mutual de Seguros de Chile</span></a></p>
+    <footer>
+      <ul class="contFooter">
+        <li class="imgFooter">
+          <a href="https://www.mutualdeseguros.cl/" target="_blank">
+            <figure class="enLinea">
+              <img src="images/logo.png" alt="">
+            </figure>
+          </a>         
+        </li>
+        <li>
+          <h3>Mutual de Seguros de Chile</h3>
           <p>Molina N° 446, Valparaíso - Chile</p>
-        </div>
-        <div class="contacto">
+          <p><a href="https://www.mutualdeseguros.cl/" target="_blank"><span class="destacadoFooter">https://www.mutualdeseguros.cl/</span></a></p>
+        </li>
+        <li>
+          <h3>Contacto</h3>
           <p><span class="destacadoFooter capitulizar">Call Center</span> 600 626 7311</p>
           <p><span class="destacadoFooter capitulizar">Desde celulares</span> (32) 2326707</p>
-        </div>
-        <div class="fotosFooter pull-right">
           <p><span class="destacadoFooter capitulizar">Email: </span><a class="gris" href="https://www.mutualdeseguros.cl/contacto/" target="_blank">contacto@mutualdeseguros.cl</a></p>
-        </div>
-      </footer>
+        </li>
+      </ul>
+    </footer>
 
 
     <!-- build:js(.) scripts/vendor.js -->
